--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "md5": "^2.1.0",
-    "mongoose": "^4.5.8"
-  },
-  "devDependencies": {
-    "faker": "^3.1.0",
-    "lorem-ipsum": "^1.0.3"
+    "mongoose": "^4.5.8",
+    "faker": "^3.1.0"
   }
 }
